Fix exam exercise 2.